--- a/dissertation.bib
+++ b/dissertation.bib
@@ -1022,7 +1022,7 @@ There are epistemological difficulties in this theory. Risk, the brain, and adol
   urldate = {2015-10-05},
   date = {2014-03-11},
   author = {Foulkes, Lucy and Viding, Essi and McCrory, Eamon and Neumann, Craig S.},
-  file = {/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/2YPDU5MU/K-SRQ.pdf;/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/79TM9U2R/Foulkes et al. - 2014 - Social Reward Questionnaire (SRQ) development and.pdf},
+  file = {/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/2YPDU5MU/K-SRQ.pdf;/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/79TM9U2R/Foulkes et al. - 2014 - Social Reward Questionnaire (SRQ) development and.pdf;/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/V3RGBL4E/Social Reward Questionnaire (SRQ)_ADULT.pdf},
   eprinttype = {pmid},
   eprint = {24653711},
   pmcid = {PMC3949132}
@@ -6184,7 +6184,8 @@ First-timers are novices at sex and probably at drinking as well, and their deci
   date = {2016},
   pages = {1111-1140},
   author = {Le Pelley, Mike E. and Mitchell, Chris J. and Beesley, Tom and George, David N. and Wills, Andy J.},
-  file = {/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/TVKYRHWB/Le Pelley et al. - 2016 - Attention and associative learning in humans An i.pdf}
+  file = {/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/TVKYRHWB/Le Pelley et al. - 2016 - Attention and associative learning in humans An i.pdf},
+  annotation = {"Rather, a simpler model, in which attention to stimuli is determined by how strongly they are associated with significant outcomes, goes a long way to account for the data on human attentional learning"}
 }
 
 @article{schultz2015,
@@ -6274,6 +6275,81 @@ First-timers are novices at sex and probably at drinking as well, and their deci
   pages = {10--52},
   author = {Kruschke, John K. and Hullinger, Richard A.},
   file = {/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/F8QNP9D3/KRUSCHKE and HULLINGER - Evolution of attention in learning.pdf;/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/VAYKY6SB/Kruschke and Hullinger - 2010 - Evolution of attention in learning.pdf;/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/6RTI9N8T/books.html}
+}
+
+@article{wulf2016,
+  langid = {english},
+  title = {Optimizing Performance through Intrinsic Motivation and Attention for Learning: {{The OPTIMAL}} Theory of Motor Learning},
+  volume = {23},
+  issn = {1069-9384, 1531-5320},
+  url = {https://link.springer.com/article/10.3758/s13423-015-0999-9},
+  doi = {10.3758/s13423-015-0999-9},
+  shorttitle = {Optimizing Performance through Intrinsic Motivation and Attention for Learning},
+  abstract = {Effective motor performance is important for surviving and thriving, and skilled movement is critical in many activities. Much theorizing over the past few decades has focused on how certain practice conditions affect the processing of task-related information to affect learning. Yet, existing theoretical perspectives do not accommodate significant recent lines of evidence demonstrating motivational and attentional effects on performance and learning. These include research on (a) conditions that enhance expectancies for future performance, (b) variables that influence learners’ autonomy, and (c) an external focus of attention on the intended movement effect. We propose the OPTIMAL (Optimizing Performance through Intrinsic Motivation and Attention for Learning) theory of motor learning. We suggest that motivational and attentional factors contribute to performance and learning by strengthening the coupling of goals to actions. We provide explanations for the performance and learning advantages of these variables on psychological and neuroscientific grounds. We describe a plausible mechanism for expectancy effects rooted in responses of dopamine to the anticipation of positive experience and temporally associated with skill practice. Learner autonomy acts perhaps largely through an enhanced expectancy pathway. Furthermore, we consider the influence of an external focus for the establishment of efficient functional connections across brain networks that subserve skilled movement. We speculate that enhanced expectancies and an external focus propel performers’ cognitive and motor systems in productive “forward” directions and prevent “backsliding” into self- and non-task focused states. Expected success presumably breeds further success and helps consolidate memories. We discuss practical implications and future research directions.},
+  number = {5},
+  journaltitle = {Psychonomic Bulletin \& Review},
+  shortjournal = {Psychon Bull Rev},
+  urldate = {2018-05-15},
+  date = {2016-10-01},
+  pages = {1382-1414},
+  author = {Wulf, Gabriele and Lewthwaite, Rebecca},
+  file = {/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/9YCVF2Q2/Wulf and Lewthwaite - 2016 - Optimizing performance through intrinsic motivatio.pdf;/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/9XMXB3Z9/s13423-015-0999-9.html}
+}
+
+@article{carlaberg2016,
+  langid = {english},
+  title = {Linking {{Individual Learning Styles}} to {{Approach}}-{{Avoidance Motivational Traits}} and {{Computational Aspects}} of {{Reinforcement Learning}}},
+  volume = {11},
+  issn = {1932-6203},
+  url = {http://dx.plos.org/10.1371/journal.pone.0166675},
+  doi = {10.1371/journal.pone.0166675},
+  number = {11},
+  journaltitle = {PLOS ONE},
+  urldate = {2018-05-15},
+  date = {2016-11-16},
+  pages = {e0166675},
+  author = {Carl Aberg, Kristoffer and Doell, Kimberly C. and Schwartz, Sophie},
+  editor = {Daunizeau, Jean},
+  file = {/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/LVHJF6X6/Carl Aberg et al. - 2016 - Linking Individual Learning Styles to Approach-Avo.pdf}
+}
+
+@article{davidow2016,
+  title = {An {{Upside}} to {{Reward Sensitivity}}: {{The Hippocampus Supports Enhanced Reinforcement Learning}} in {{Adolescence}}},
+  volume = {92},
+  issn = {0896-6273},
+  url = {http://www.sciencedirect.com/science/article/pii/S0896627316305244},
+  doi = {10.1016/j.neuron.2016.08.031},
+  shorttitle = {An {{Upside}} to {{Reward Sensitivity}}},
+  abstract = {Summary
+Adolescents are notorious for engaging in reward-seeking behaviors, a tendency attributed to heightened activity in the brain’s reward systems during adolescence. It has been suggested that reward sensitivity in adolescence might be adaptive, but evidence of an adaptive role has been scarce. Using a probabilistic reinforcement learning task combined with reinforcement learning models and fMRI, we found that adolescents showed better reinforcement learning and a stronger link between reinforcement learning and episodic memory for rewarding outcomes. This behavioral benefit was related to heightened prediction error-related BOLD activity in the hippocampus and to stronger functional connectivity between the hippocampus and the striatum at the time of reinforcement. These findings reveal an important role for the hippocampus in reinforcement learning in adolescence and suggest that reward sensitivity in adolescence is related to adaptive differences in how adolescents learn from experience.},
+  number = {1},
+  journaltitle = {Neuron},
+  shortjournal = {Neuron},
+  urldate = {2018-05-15},
+  date = {2016-10-05},
+  pages = {93-99},
+  author = {Davidow, Juliet Y. and Foerde, Karin and Galván, Adriana and Shohamy, Daphna},
+  file = {/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/A6EDPJAD/1-s2.0-S0896627316305244-mmc2 (1).pdf;/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/TRKG6RQ2/Davidow et al. - 2016 - An Upside to Reward Sensitivity The Hippocampus S.pdf;/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/WF57QGDH/1-s2.0-S0896627316305244-mmc1 (1).pdf;/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/FG4ZHV5K/S0896627316305244.html}
+}
+
+@book{cavanagh,
+  title = {Early {{Pubertal Timing}} and the {{Union Formation Behaviors}} of {{Young Women}}},
+  abstract = {This study examined whether the transition into adolescence, proxied by pubertal timing, shaped the transition into adulthood, proxied by union formation behaviors, among contemporary American women. In a sample drawn from Add Health (n = 7,523), early maturing girls reported an accelerated transition to marriage and cohabitation in young adulthood, net of family structure history, academic achievement in high school, and pa-rental education. The link between pubertal timing and cohabitation was strongest among socioeconomically advantaged women; no socio-economic differences were identified for marriage. The tendency for early maturers to have more pronounced romantic orientations during adolescence partially explained their transitions to marriage. In all, the persistence of the pubertal timing effect into young adulthood suggests that early maturers accelerated entrance into the romantic market in adolescence has a cascading, long-term impact on the shape of their lives in young adulthood. For much of the 20th century, entry into marriage marked a young woman’s transi-tion to adulthood (Fussell and Gauthier 2005). Yet, as both a cause and consequence of changing cultural norms around marriage and sexual behavior and rising rates of},
+  author = {Cavanagh, Shannon E.},
+  file = {/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/GH48FNMU/Cavanagh - Early Pubertal Timing and the Union Formation Beha.pdf;/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/M524LMES/summary.html}
+}
+
+@inproceedings{chelian2015,
+  title = {Reinforcement Learning and Instance-Based Learning Approaches to Modeling Human Decision Making in a Prognostic Foraging Task},
+  doi = {10.1109/DEVLRN.2015.7346127},
+  abstract = {Procedural memory and episodic memory are known to be distinct and both underlie the performance of many tasks. Reinforcement learning (RL) and instance-based learning (IBL) represent common approaches to modeling procedural and episodic memory in that order. In this work, we present a neural model utilizing RL dynamics and an ACT-R model utilizing IBL productions to the task of modeling human decision making in a prognostic foraging task. The task performed was derived from a geospatial intelligence domain wherein agents must choose among information sources to more accurately predict the actions of an adversary. Results from both models are compared to human data and suggest that information gain is an important component in modeling decision-making behavior using either memory system; with respect to the episodic memory approach, the procedural memory approach has a small but significant advantage in fitting human data. Finally, we discuss the interactions of multi-memory systems in complex decision-making tasks.},
+  eventtitle = {2015 {{Joint IEEE International Conference}} on {{Development}} and {{Learning}} and {{Epigenetic Robotics}} ({{ICDL}}-{{EpiRob}})},
+  booktitle = {2015 {{Joint IEEE International Conference}} on {{Development}} and {{Learning}} and {{Epigenetic Robotics}} ({{ICDL}}-{{EpiRob}})},
+  date = {2015-08},
+  pages = {116-122},
+  keywords = {ACT-R model,cognition,complex decision-making tasks,Computational Neuroscience,Data models,decision making,Decision making,Decision Making,Electronic mail,episodic memory,Geospatial analysis,geospatial intelligence domain,human decision making,IBL productions,information sources,Instance-based learning (IBL),instance-based learning approach,learning (artificial intelligence),Learning (artificial intelligence),neural model,procedural memory,Prognostic foraging,prognostic foraging task,Reinforcement learning (RL),RL dynamics,Roads,Training},
+  author = {Chelian, S. E. and Paik, J. and Pirolli, P. and Lebiere, C. and Bhattacharyya, R.},
+  file = {/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/TNMIEDQ7/Chelian et al. - 2015 - Reinforcement learning and instance-based learning.pdf;/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/26EBYCZP/7346127.html}
 }
 
 
